# Rift.Input

./: CMakeLists.txt  module.json
assets/Engine/Config/: Input.ini
private/Engine/Input/: InputAxisRepository.cpp  InputKeyRepository.cpp  InputManager.cpp  InputModule.cpp  InputSystem.cpp
public/Engine/Input/: IInputDevice.hpp  IInputTarget.hpp  IVirtualKeyboard.hpp  InputAxisRepository.hpp  InputEvent.hpp  InputKeyRepository.hpp  InputManager.hpp  InputModule.hpp  InputSystem.hpp
